--- a/style.css
+++ b/style.css
@@ -1,20 +1,40 @@
 * {
     font-family: "Comic Sans MS", "Comic Sans";
 }
+html{
+    max-height: 100%;
+}
 
 body{
     font-size: large;
     font-weight: bold;
-    min-height: 100vh;
+    min-height: 97vh;
+    max-width: 100%;
+    overflow-x: hidden;
     display: flex;
     flex-direction: column;
 }
 footer {
-margin-top: auto;
-margin-bottom: 25px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;  
 }
-
+#container {
+    display: flex;
+    flex-direction: row;
+    height: 80vh;
+}
 #output{
-    margin-right: 50vw;
+    font-size: 22px;
     border-spacing: 1.5vh;
+    overflow-y: auto;
+    display: block;
+    height: 100%;
+    max-width: 70%;
+    
+}
+#doof {
+    width: 50vw;
+    
 }
